Refactor: Final cleanup and code quality improvements (Phases 11-13)
- Cleaned up BinaryCodedGA, FlockingAgent, and DistributedLinearAlgebraProvider.
- Resolved legacy TODOs, unused variables, and lint warnings.
- Propagated deprecations in HybridComputeContext and Group.
- Restored boid initialization in Flock.java.
- Consolidated and moved evolutionary tests to correct packages.
- Modernized GP components (Function/Terminal) by replacing deprecated newInstance().
- Cleaned up generative AI backends and ACL/BDI agent messages.